[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/pedra.gd" type="Script" id=1]
[ext_resource path="res://sprites/pedra.png" type="Texture" id=2]
[ext_resource path="res://fontes/AdobeGothicStd-Bold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 14
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 13, 13 )

[node name="Preda" type="KinematicBody2D"]

transform/scale = Vector2( 0.763619, 1.23438 )
z/z = 1
input/pickable = true
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="frente" type="Sprite" parent="."]

material/use_parent = true
transform/scale = Vector2( 1.01588, 0.520326 )
texture = ExtResource( 2 )

[node name="TopLabel" type="Label" parent="frente"]

rect/min_size = Vector2( 5, 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
size_flags/stretch_ratio = 44.0
margin/left = -31.0
margin/top = -61.0
margin/right = 32.0
margin/bottom = -3.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Acido"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BotLabel" type="Label" parent="frente"]

rect/min_size = Vector2( 5, 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
size_flags/stretch_ratio = 44.0
margin/left = -31.0
margin/top = 10.0
margin/right = 32.0
margin/bottom = 59.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 0
text = "HCl"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ClickArea2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.46155, 0, 0, 2.46154, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea2D"]

transform/scale = Vector2( 2.46155, 2.46154 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[connection signal="input_event" from="ClickArea2D" to="." method="_on_ClickArea2D_input_event"]


